[gd_scene load_steps=16 format=2]

[ext_resource path="res://assests/world/Birds/1/idle/idle_anim0001.png" type="Texture" id=1]
[ext_resource path="res://assests/world/Birds/1/idle/idle_anim0000.png" type="Texture" id=2]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0000.png" type="Texture" id=3]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0001.png" type="Texture" id=4]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0002.png" type="Texture" id=5]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0003.png" type="Texture" id=6]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0004.png" type="Texture" id=7]
[ext_resource path="res://assests/world/Birds/1/fly/fly_anim0005.png" type="Texture" id=8]
[ext_resource path="res://assests/world/Birds/1/Bird1.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.02083, 1.93863 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.5149, 17.2604 )

[sub_resource type="Animation" id=4]
resource_name = "eating"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fly"
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fly" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[node name="Bird1" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 20
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.486136, 0.265165 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.08111, -10.2888 )
shape = SubResource( 3 )

[node name="Ground_check" type="RayCast2D" parent="."]
position = Vector2( 17, 0 )
scale = Vector2( 0.3, 0.2 )
enabled = true
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/eating = SubResource( 4 )
anims/fly = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="Idle_t" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Idle_t" to="." method="_on_Idle_t_timeout"]
